--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,9 +1,6 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-  "extends": [
-    "ultracite/core",
-    "ultracite/next"
-  ],
+  "extends": ["ultracite/core", "ultracite/next"],
   "vcs": {
     "enabled": true,
     "clientKind": "git",
