--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "typecheck": "tsc --noEmit",
+    "lint": "bunx ultracite check",
+    "lint:fix": "bunx ultracite fix",
+    "check": "bun typecheck && bun lint"
   },
   "dependencies": {
     "react": "19.2.0",
