--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "check": "bun typecheck && bun lint"
   },
   "dependencies": {
+    "@convex-dev/better-auth": "^0.9.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "better-auth": "1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
