finally complete emails

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -18,6 +18,9 @@
     "rules": {
       "suspicious": {
         "noUnknownAtRules": "off"
+      },
+      "style": {
+        "useFilenamingConvention": "off"
       }
     }
   }
