--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@convex-dev/better-auth": "^0.9.6",
+    "@convex-dev/resend": "^0.1.13",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "^0.5.7",
     "@tanstack/react-form": "^1.23.8",
     "better-auth": "1.3.27",
     "class-variance-authority": "^0.7.1",
