add auth store and auth provider

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ BETTER_AUTH_SECRET=PjrVjbw1mV4XcTvV0uD9BP2sZ9xBSXu+QzpnIAZTYok=
 # Not needed in Vercel, only in Convex
 RESEND_API_KEY=re_yourResendAPIKey
 RESEND_WEBHOOK_SECRET=whsec_yourResendWebhookSecret
+
+NEXT_PUBLIC_LOCALSTORAGE_PREFIX=yourapp
