add core of pwa

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ RESEND_API_KEY=re_yourResendAPIKey
 RESEND_WEBHOOK_SECRET=whsec_yourResendWebhookSecret
 
 NEXT_PUBLIC_LOCALSTORAGE_PREFIX=yourapp
+
+# Vapid keys - for web-push notifications
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=your_public_key_here
+VAPID_PRIVATE_KEY=your_private_key_here
