--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "plugins": [
       {
         "name": "next"
+      },
+      {
+        "name": "@effect/language-service"
       }
     ],
     "paths": {
