--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
+    "convex-helpers": "^0.1.104",
     "effect": "^3.18.4",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
