--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,10 @@ NEXT_PUBLIC_LOCALSTORAGE_PREFIX=yourapp
 # Vapid keys - for web-push notifications
 NEXT_PUBLIC_VAPID_PUBLIC_KEY=your_public_key_here
 VAPID_PRIVATE_KEY=your_private_key_here
+
+# Used only in Convex env vars
+R2_BUCKET=yourbucketname
+R2_TOKEN=abcd12345678
+R2_ACCESS_KEY_ID=abcd1235678
+R2_SECRET_ACCESS_KEY=abcd12345678
+R2_ENDPOINT=endpoint.com
